# light-auto-on

./: .clippy.toml  .runner  Cargo.toml  README.md  avr-unknown-gnu-attiny85.json  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  power.rs  timer0.rs
