[package]
name = "Freundin-zufrieden"
version = "0.1.0"
edition = "2021"
publish = false

[profile.dev]
opt-level = "s"
overflow-checks = false
panic = "abort"
lto = true

[profile.release]
opt-level = "s"
overflow-checks = false
panic = "abort"
lto = true

[dependencies]
avr-device = { version = "0.7.0", features = ["attiny85", "rt"] }
